--- a/apple-pie/style.css
+++ b/apple-pie/style.css
@@ -7,7 +7,7 @@
 }
 
 header {
-    background-image: url("../images/apple-pie.jpg");
+    background-image: url("./images/apple-pie.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     height: 60rem;
@@ -15,12 +15,6 @@ header {
     align-items: center;
     justify-content: center;
     position: relative;
-
-}
-
-header div {
-    top: 50%;
-    bottom: 50%
 
 }
 
@@ -45,10 +39,7 @@ img {
 }
 
 #ingredients {
-    margin-top: 3%;
-    margin-bottom: 3%;
-    margin-left: auto;  
-    margin-right: auto;
+    margin: 3% auto;
     width: 80%;
 }
 
@@ -84,7 +75,7 @@ ul {
     margin-bottom: 3%;
 }
 
-#directions article {
+#directions ol {
     position: relative;
     left: 13%;
     width: 70%;
